k8s/k8s/yaml/pod.yaml
#  Pod 
#   base: name, namespace, image, image displayname, container port
#   initContainer: 在创建pod之前，做一些操作，可以修改image，也可以等待其他task
#   
# 

# base pod
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80


# ---

apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app.kubernetes.io/name: MyApp
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
