k8s/k8s/yaml/deploy.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: my-app-ui
  annotations:
    kubectl.kubernetes.io/last-applied-configuration:

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-ui
  namespace: my-app-ui
spec:
  selector:
    matchLabels:
      app: my-app-ui
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: my-app-ui
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app-ui
  namespace: my-app-ui
spec:
  selector:
    app: my-app-ui
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: my-app-ui
    port: 8082
    targetPort: 80
---

# apiVersion: "v1"
# kind: "Secret"
# metadata:
#   name: "nginxsecret"
#   namespace: "default"
# type: kubernetes.io/tls
# data:
#   tls.crt: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVUEg2bjZPbWFZQU1tcXNFNmFoeVNGeWNHV1BFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd01URVdNQlFHQTFVRUF3d05ibWRwYm5ndGRHVnpkR2x1WnpFWE1CVUdBMVVFQ2d3T2JtZHBlR2x1TFhSbApjM1JwYm1jd0hoY05NalF3TVRBNE1EYzBNVEkyV2hjTk1qVXdNVEEzTURjME1USTJXakF4TVJZd0ZBWURWUVFECkRBMXVaMmx1ZUMxMFpYTjBhVzVuTVJjd0ZRWURWUVFLREE1dVoybDRhVzR0ZEdWemRHbHVaekNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTG1hWVYxb3J2bUp6MXROb0crWlRTZjE0TlVVdzdGZgptdG9CY0h4Z0tJWU [...]
#   tls.key: "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQzVtbUZkYUs3NWljOWIKVGFCdm1VMG45ZURWRk1PeFg1cmFBWEI4WUNpR0FHY3FZL1FjOHk2SWhHdmwzSVBZMFpPUTYwRHlQYUJlZTdCKwpZcU5qRWhoREh2bnVQUVFqSDVCV0dROGFnYWVacEpCUC9PQXdzZ1JtR245V0hsQ3FHOHZmc3pGSU5Pa282Znc1Cm1QaEJKMEtxRFcyU0VTVUo4djZ3YnRUU2lqZWd3V29BVnBGQ05CTVZvcTNsaFE0WVppTkIrK3I1WGxZRzljK0cKd3BwaWRuWEw5aFpWemthT1VSclJsNGdGUmsvN1d6QnVMRnJJQnlncS9EdFdpbTFRcnVBU09UblI3V21wbmc4SApVOHdRbDNBU0prRW [...]

# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ui-ingress
  namespace: my-app-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /my-app-ui
        pathType: Prefix
        backend:
          service:
            name: my-app-ui
            port:
              number: 8082
